--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -25,9 +25,10 @@
         android:paddingStart="30dp"
         android:paddingEnd="30dp"
         android:textColor="@color/white"
+        app:layout_constraintTop_toBottomOf="@id/planetes_book"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/planetes_book"/>
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
