--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/plants_book"
         app:layout_constraintTop_toTopOf="parent"
+        android:elevation="1dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/text"/>
@@ -29,6 +30,31 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/plants_book"/>
+
+    <ImageView
+        android:id="@+id/bottom_half_circle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/bottom_half_circle"
+        app:layout_constraintTop_toBottomOf="@id/plants_book"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/plants_book"
+        app:layout_constraintEnd_toStartOf="@id/plants_book"/>
+
+    <ImageView
+        android:id="@+id/two_papers"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/two_papers"
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/plants_book"
+        app:layout_constraintEnd_toEndOf="@id/plants_book"
+        app:layout_constraintStart_toStartOf="@+id/plants_book"
+         />
+
+
+
 
 
 
