--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -31,7 +31,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/vegtables_book"/>
     <ImageView
-        android:id="@+id/right_half_circle"
+        android:id="@+id/fragment_right_half_circle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/right_half_circle"
