--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/action_search"
-        android:title="home"
+        android:title="My books"
         android:icon="@drawable/group_11"
         />
     <item android:id="@+id/action_settings"
-        android:title="add"
+        android:title="Discover"
         android:icon="@drawable/group_10" />
     <item android:id="@+id/action_navigation"
-        android:title="clients"
+        android:title="Profile"
         android:icon="@drawable/group_9" />
 </menu>
